# compiler-issues

./: .gitignore  README.md
ExternTemplate/: CMakeLists.txt  Calculator.hpp  Calculator.ixx  CalculatorTest.cpp  README.md  SumDefault.cpp  stat.cmake
ExternTemplate/Calculator/: CMakeLists.txt  Calculator.cpp  Calculator.hpp
Filesystem/: CMakeLists.txt  README.md  main.cpp
GlobalMerge/: CMakeLists.txt  README.md  flags.c
MemcpyAliasing/: CMakeLists.txt  README.md  main.c
NdkLinker/: CMakeLists.txt  Calculator.cpp  README.md  main.c
UcrtPrintf/: CMakeLists.txt  README.md  main.cpp  setup32.asm  setup64.asm  sized.cpp
XpConCRT/: CMakeLists.txt  CMakePresets.json  README.md  init.cpp  main.cpp
